syntax = "proto3";

package ON.Fragments.Authorization.Payment.Crypto;

import "google/protobuf/timestamp.proto";

// Service wide record
message BitcoinServiceRecord {
  int32 LastAddressUsed = 1;
  google.protobuf.Timestamp ModifiedOnUTC = 2;
}
